Add links to recipe pages to index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
     
-    <title>Document</title>
+    <title>Recipes</title>
 
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li>
+            <a href="recipes/amaretticookies.html">Amaretti Cookies</a>
+        </li>
 
-    <a href="recipes/amaretticookies.html">Amaretti Cookies</a>
+        <li>
+            <a href="recipes/browniecookies.html">Brownie Cookies</a>
+        </li>
+
+        <li><a href="recipes/pbcookies.html">Peanut Butter Cookies</a>
+        </li>
+
+    </ul>
 </body>
 </html>
