--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <img src="images/cookies.gif" alt="Spongebob eating cookies">
+
     <ul>
         <li>
             <a href="recipes/amaretticookies.html">Amaretti Cookies</a>
