Add images to recipe pages

--- a/recipes/amaretticookies.html
+++ b/recipes/amaretticookies.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        
         <meta charset="UTF-8">
 
         <body>
             <h1>Amaretti Cookies</h1>
+
+            <img src="../images/Acookie.jpg" width="300" height="350" alt="Amaretti cookie" >
         </body>
     </head>
 
