--- a/recipes/browniecookies.html
+++ b/recipes/browniecookies.html
@@ -7,6 +7,8 @@
 <body>
 
     <h1>Brownie Cookies</h1>
+
+    <img src="../images/bcookie.jpeg" width="300" height="350" alt="Brownie cookie">
     
 </body>
 </html>
