Add descriptions to recipe pages

--- a/recipes/amaretticookies.html
+++ b/recipes/amaretticookies.html
@@ -5,9 +5,21 @@
         <meta charset="UTF-8">
 
         <body>
+            
             <h1>Amaretti Cookies</h1>
 
-            <img src="../images/Acookie.jpg" width="300" height="350" alt="Amaretti cookie" >
+                <img src="../images/Acookie.jpg" width="300" height="350" alt="Amaretti cookie" >
+
+            <h2>Description</h2>
+
+                <p>
+                    Italian cookie with slightly crisp outside and soft and chewy inside.
+                </p>
+
+                <p>
+                    Sweet almond flavored cookie.
+                </p>
+
         </body>
     </head>
 
