--- a/recipes/browniecookies.html
+++ b/recipes/browniecookies.html
@@ -9,6 +9,12 @@
     <h1>Brownie Cookies</h1>
 
     <img src="../images/bcookie.jpeg" width="300" height="350" alt="Brownie cookie">
+
+    <h2>Description</h2>
+
+    <p>
+        Soft and chewy brownie flavored cookie.
+    </p>
     
 </body>
 </html>
