--- a/recipes/pbcookies.html
+++ b/recipes/pbcookies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+
     <meta charset="UTF-8">
     
     <title>PB Cookies</title>
@@ -12,6 +12,12 @@
     <h1>Peanut Butter Cookies</h1>
 
     <img src="../images/pbcookie.jpeg" width="300" height="350" alt="Peanut Butter Cookie">
+
+    <h2>Description</h2>
+
+    <p>
+        Delicious soft peanut butter flavored cookies.
+    </p>
 
 </body>
 </html>
