Add ingredients to recipe pages

--- a/recipes/amaretticookies.html
+++ b/recipes/amaretticookies.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
 
         <body>
-            
+
             <h1>Amaretti Cookies</h1>
 
                 <img src="../images/Acookie.jpg" width="300" height="350" alt="Amaretti cookie" >
@@ -19,6 +19,19 @@
                 <p>
                     Sweet almond flavored cookie.
                 </p>
+
+                <h3>Ingredients</h3>
+                
+                <ul>
+                    <li>5 eggs whites</li>
+                    <li>Pinch salt</li>
+                    <li>4 1/2-5 cups almond flour</li>
+                    <li>1 1/2 cup granulated sugar</li>
+                    <li>1/2 tsp vanilla extract</li>
+                    <li>1-2 tsp almond extract</li> 
+                    <li>1/2 cup granulated sugar</li>
+                    <li>1/2 powdered sugar</li>
+                </ul>
 
         </body>
     </head>
