--- a/recipes/browniecookies.html
+++ b/recipes/browniecookies.html
@@ -15,6 +15,21 @@
     <p>
         Soft and chewy brownie flavored cookie.
     </p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>4 ounces baking chocolate (unsweetened or bittersweet)</li>
+        <li>2 cups granulated sugar</li> 
+        <li>2 sticks salted butter, softened</li>
+        <li>3 large eggs</li> 
+        <li>1 tablespoon vanilla extract</li> 
+        <li>2 1/4 cups all-purpose flour</li> 
+        <li>1/4 cup plus 1 tablespoon cocoa powder</li>
+        <li>1 teaspoon baking powder</li>
+        <li>1/2 teaspoon kosher salt</li>
+        <li>Powdered sugar, for dusting</li>
+    </ul>
     
 </body>
 </html>
