--- a/recipes/pbcookies.html
+++ b/recipes/pbcookies.html
@@ -19,5 +19,18 @@
         Delicious soft peanut butter flavored cookies.
     </p>
 
+    <h3>Ingredients</h3>
+    
+    <ul>
+        <li>1 cup sugar, 1/4 cup additional to roll cookies</li>
+        <li>1 stick butter, at room temperature</li>
+        <li>1 egg</li>
+        <li>1 cup smooth peanut butter</li>
+        <li>1 teaspoon vanilla</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/2 teaspoon baking soda</li>
+        <li>1 1/2 cups flour</li>
+    </ul>
+
 </body>
 </html>
