Add steps to recipe pages

--- a/recipes/amaretticookies.html
+++ b/recipes/amaretticookies.html
@@ -21,7 +21,7 @@
                 </p>
 
                 <h3>Ingredients</h3>
-                
+
                 <ul>
                     <li>5 eggs whites</li>
                     <li>Pinch salt</li>
@@ -32,6 +32,21 @@
                     <li>1/2 cup granulated sugar</li>
                     <li>1/2 powdered sugar</li>
                 </ul>
+            
+            <h3>Steps</h3>
+
+                <ol>
+                    <li>Separate 5 egg whites into a bowl then add a pinch of salt.</li>
+                    <li>Using an electric mixer beat the egg whites until stiff peaks form.</li>
+                    <li>Set that aside and sift 5 cups of almond flour with 1 1/2 cups of granulated sugar into a bowl.</li>
+                    <li>Add about 1/3 of the almond flour mixture into the egg whites and fold it in gently with a spatula.</li>
+                    <li>Now go ahead and add 1/2 tsp vanilla extract and 2 tsps of almond extract. Then quickly fold it in.</li>
+                    <li>Add the second third of the almond flour mixture to the egg whites and gently fold it in again.</li>
+                    <li>Sift in the remaining third of the almond flour mixture and fold it in one last time. at this point, the cookie dough should have a thick paste like texture.</li>
+                    <li>Scoop out mounds of the cookie dough and place them into a plate of granulated sugar. Roll the scoop of cookie dough into the sugar, then take it into your hands and round it out to a ball.</li>
+                    <li>Drop the ball into a bowl of powdered sugar and evenly coat it.</li>
+                    <li>Place the cookies onto a baking sheet lined with parchment paper and lightly press each cookie with your hand. Bake at 325 degrees Fahrenheit for 20-25 minutes.</li>
+                </ol>
 
         </body>
     </head>
