--- a/recipes/browniecookies.html
+++ b/recipes/browniecookies.html
@@ -8,28 +8,38 @@
 
     <h1>Brownie Cookies</h1>
 
-    <img src="../images/bcookie.jpeg" width="300" height="350" alt="Brownie cookie">
+        <img src="../images/bcookie.jpeg" width="300" height="350" alt="Brownie cookie">
 
     <h2>Description</h2>
 
-    <p>
-        Soft and chewy brownie flavored cookie.
-    </p>
+        <p>
+            Soft and chewy brownie flavored cookie.
+        </p>
 
     <h3>Ingredients</h3>
 
-    <ul>
-        <li>4 ounces baking chocolate (unsweetened or bittersweet)</li>
-        <li>2 cups granulated sugar</li> 
-        <li>2 sticks salted butter, softened</li>
-        <li>3 large eggs</li> 
-        <li>1 tablespoon vanilla extract</li> 
-        <li>2 1/4 cups all-purpose flour</li> 
-        <li>1/4 cup plus 1 tablespoon cocoa powder</li>
-        <li>1 teaspoon baking powder</li>
-        <li>1/2 teaspoon kosher salt</li>
-        <li>Powdered sugar, for dusting</li>
-    </ul>
-    
+        <ul>
+            <li>4 ounces baking chocolate (unsweetened or bittersweet)</li>
+            <li>2 cups granulated sugar</li> 
+            <li>2 sticks salted butter, softened</li>
+            <li>3 large eggs</li> 
+            <li>1 tablespoon vanilla extract</li> 
+            <li>2 1/4 cups all-purpose flour</li> 
+            <li>1/4 cup plus 1 tablespoon cocoa powder</li>
+            <li>1 teaspoon baking powder</li>
+            <li>1/2 teaspoon kosher salt</li>
+            <li>Powdered sugar, for dusting</li>
+        </ul>
+
+    <h3>Steps</h3>
+
+        <ol>
+            <li>Preheat the oven to 350 degrees F. Line a baking sheet with a silicone baking mat or parchment paper.</li>
+            <li>Put the chocolate in a microwave-safe bowl and melt it in the microwave. Stir and let cool.</li>
+            <li>Using an electric mixer, mix together the sugar and butter in a large bowl until totally combined. With the mixer on low, slowly drizzle in the cooled chocolate. Scrape the bowl and mix again. Mix in the eggs one at a time, then the vanilla. Scrape the bowl once more and mix.</li>
+            <li>Combine the flour, cocoa powder, baking powder and salt in a bowl and stir it together. Add it in scoops to the mixing bowl with the mixer on low. Scrape the bowl once and mix one final time until all combined.</li>
+            <li>Scoop generous tablespoons of the dough onto the prepared baking sheet, then bake until the cookies are poufy and set, 11 to 12 minutes. Let them sit on the baking sheet for 1 to 2 minutes, then remove them to a wire rack to cool completely. Repeat with the remaining dough.</li>
+            <li>Once cool, sprinkle generously with powdered sugar.</li>
+        </ol>
 </body>
 </html>
