--- a/recipes/pbcookies.html
+++ b/recipes/pbcookies.html
@@ -9,28 +9,42 @@
 </head>
 <body>
     
-    <h1>Peanut Butter Cookies</h1>
+    <h1>Peanut Butter Cookies</h1> <!-- heading -->
 
-    <img src="../images/pbcookie.jpeg" width="300" height="350" alt="Peanut Butter Cookie">
+        <img src="../images/pbcookie.jpeg" width="300" height="350" alt="Peanut Butter Cookie"> <!-- heading -->
 
-    <h2>Description</h2>
+    <h2>Description</h2> <!-- heading -->
 
-    <p>
-        Delicious soft peanut butter flavored cookies.
-    </p>
+        <p>
+            Delicious soft peanut butter flavored cookies. 
+        </p>
 
-    <h3>Ingredients</h3>
-    
-    <ul>
-        <li>1 cup sugar, 1/4 cup additional to roll cookies</li>
-        <li>1 stick butter, at room temperature</li>
-        <li>1 egg</li>
-        <li>1 cup smooth peanut butter</li>
-        <li>1 teaspoon vanilla</li>
-        <li>1/2 teaspoon salt</li>
-        <li>1/2 teaspoon baking soda</li>
-        <li>1 1/2 cups flour</li>
-    </ul>
+    <h3>Ingredients</h3> <!-- heading -->
+
+        <ul>
+            <li>1 cup sugar, 1/4 cup additional to roll cookies</li>
+            <li>1 stick butter, at room temperature</li>
+            <li>1 egg</li>
+            <li>1 cup smooth peanut butter</li>
+            <li>1 teaspoon vanilla</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1/2 teaspoon baking soda</li>
+            <li>1 1/2 cups flour</li>
+        </ul>
+
+    <h3>Steps</h3>
+
+        <ol>
+            <li>Preheat oven to 375 degrees.</li> 
+            <li>Grease a baking sheet.</li> 
+            <li>In a large bowl, cream together sugar and butter.</li> 
+            <li>Beat in egg to mixture.</li> 
+            <li>Mix in peanut butter and vanilla until smooth and creamy.</li> 
+            <li>Stir in salt, baking soda and flour until well combined.</li> 
+            <li>Roll dough into 1 inch balls and then roll in sugar.</li> 
+            <li>Place on baking sheet and flatten with fork.</li> 
+            <li>Bake for 12-15 minutes.</li>
+        </ol>
 
 </body>
 </html>
