Add homepage link back to index.htl to recipe pages

--- a/recipes/amaretticookies.html
+++ b/recipes/amaretticookies.html
@@ -48,6 +48,8 @@
                     <li>Place the cookies onto a baking sheet lined with parchment paper and lightly press each cookie with your hand. Bake at 325 degrees Fahrenheit for 20-25 minutes.</li>
                 </ol>
 
+                <a href="../index.html">Homepage</a>
+
         </body>
     </head>
 
