--- a/recipes/browniecookies.html
+++ b/recipes/browniecookies.html
@@ -41,5 +41,7 @@
             <li>Scoop generous tablespoons of the dough onto the prepared baking sheet, then bake until the cookies are poufy and set, 11 to 12 minutes. Let them sit on the baking sheet for 1 to 2 minutes, then remove them to a wire rack to cool completely. Repeat with the remaining dough.</li>
             <li>Once cool, sprinkle generously with powdered sugar.</li>
         </ol>
+
+        <a href="../index.html">Homepage</a>
 </body>
 </html>
