--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Cookie Recipes</h1>
 
     <img src="images/cookies.gif" alt="Spongebob eating cookies">
 
@@ -19,7 +19,8 @@
             <a href="recipes/browniecookies.html">Brownie Cookies</a>
         </li>
 
-        <li><a href="recipes/pbcookies.html">Peanut Butter Cookies</a>
+        <li>
+            <a href="recipes/pbcookies.html">Peanut Butter Cookies</a>
         </li>
 
     </ul>
